[HOPSWORKS-1126][hops-util-py] avro parsing only works in python 2.7

--- a/tensorflow/notebooks/Serving/sklearn/IrisClassification_And_Serving_SKLearn.ipynb
+++ b/tensorflow/notebooks/Serving/sklearn/IrisClassification_And_Serving_SKLearn.ipynb
@@ -16,9 +16,7 @@
     "6. Save the trained model to HopsFS\n",
     "7. Launch a serving instance to serve the trained model\n",
     "8. Send some prediction requests to the served model\n",
-    "9. Monitor the predictions through Kafka\n",
-    "\n",
-    "**The kafka parts of this notebook have only been tested with python 2.7**"
+    "9. Monitor the predictions through Kafka\n"
    ]
   },
   {
@@ -30,37 +28,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting Spark application\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>3</td><td>application_1559583245312_0004</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1559583245312_0004/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks1.logicalclocks.com:8042/node/containerlogs/container_e01_1559583245312_0004_01_000001/demo_deep_learning_admin000__meb10000\">Link</a></td><td>✔</td></tr></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SparkSession available as 'spark'.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "import joblib\n",
@@ -83,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -352,14 +322,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Started copying local path iris_knn.pkl to hdfs path hdfs://192.168.76.101:8020/Projects/demo_deep_learning_admin000/Resources/iris_knn.pkl\n",
+      "Started copying local path iris_knn.pkl to hdfs path hdfs://10.0.2.15:8020/Projects/demo_deep_learning_admin000/Resources/iris_knn.pkl\n",
       "\n",
       "Finished copying"
      ]
@@ -379,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,14 +370,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'hdfs://192.168.76.101:8020/Projects/demo_deep_learning_admin000/Models/IrisFlowerClassifier/1/'"
+      "'hdfs://10.0.2.15:8020/Projects/demo_deep_learning_admin000/Models/IrisFlowerClassifier/1/'"
      ]
     }
    ],
@@ -478,14 +448,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'hdfs://192.168.76.101:8020/Projects/demo_deep_learning_admin000/Models/IrisFlowerClassifier/1/'"
+      "'hdfs://10.0.2.15:8020/Projects/demo_deep_learning_admin000/Models/IrisFlowerClassifier/1/'"
      ]
     }
    ],
@@ -503,16 +473,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hdfs://192.168.76.101:8020/Projects/demo_deep_learning_admin000/Models/IrisFlowerClassifier/1\n",
-      "hdfs://192.168.76.101:8020/Projects/demo_deep_learning_admin000/Models/IrisFlowerClassifier/1/iris_flower_classifier.py\n",
-      "hdfs://192.168.76.101:8020/Projects/demo_deep_learning_admin000/Models/IrisFlowerClassifier/1/iris_knn.pkl"
+      "hdfs://10.0.2.15:8020/Projects/demo_deep_learning_admin000/Models/IrisFlowerClassifier/1\n",
+      "hdfs://10.0.2.15:8020/Projects/demo_deep_learning_admin000/Models/IrisFlowerClassifier/1/iris_flower_classifier.py\n",
+      "hdfs://10.0.2.15:8020/Projects/demo_deep_learning_admin000/Models/IrisFlowerClassifier/1/iris_knn.pkl"
      ]
     }
    ],
@@ -530,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -569,14 +539,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IrisFlowerClassifier"
+      "IrisFlowerClassifier\n",
+      "mnist"
      ]
     }
    ],
@@ -587,14 +558,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1"
+      "8"
      ]
     }
    ],
@@ -604,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -655,14 +626,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'IrisFlowerClassifier-inf9315'"
+      "'IrisFlowerClassifier-inf9621'"
      ]
     }
    ],
@@ -672,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -817,19 +788,19 @@
      "text": [
       "{'predictions': [0]}\n",
       "{'predictions': [0]}\n",
+      "{'predictions': [1]}\n",
+      "{'predictions': [1]}\n",
       "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [1]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [1]}\n",
       "{'predictions': [2]}\n",
       "{'predictions': [0]}\n",
-      "{'predictions': [0]}\n",
       "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [0]}\n",
-      "{'predictions': [0]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [0]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [0]}\n",
-      "{'predictions': [0]}\n",
       "{'predictions': [0]}\n",
       "{'predictions': [0]}\n",
       "{'predictions': [0]}\n",
@@ -865,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -928,49 +899,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "timeout.. no more messages to read from topic\n",
-      "serving: IrisFlowerClassifier, version: 1, timestamp: 1558610862667,\n",
-      "request: {\"inputs\": [[5.239064231541053, 5.208689457051675, 4.0032996032099835, 3.5415029636560016]]},\n",
+      "serving: IrisFlowerClassifier, version: 1, timestamp: 1560339963528,\n",
+      "request: {\"inputs\": [[4.441035498836311, 1.0405422685903551, 4.950509272511928, 7.201979298717179]]},\n",
       "prediction:0, prediction_label:Virginica, http_response_code: 200, serving_type: SKLEARN\n",
       "\n",
-      "serving: IrisFlowerClassifier, version: 1, timestamp: 1558610862803,\n",
-      "request: {\"inputs\": [[5.158378226477915, 3.353098139778006, 1.3150042985041994, 2.3350539825590473]]},\n",
-      "prediction:2, prediction_label:Setosa, http_response_code: 200, serving_type: SKLEARN\n",
-      "\n",
-      "serving: IrisFlowerClassifier, version: 1, timestamp: 1558610862896,\n",
-      "request: {\"inputs\": [[6.8126468118572205, 3.6141109766819213, 5.751793210288437, 2.435036196107494]]},\n",
+      "serving: IrisFlowerClassifier, version: 1, timestamp: 1560339963656,\n",
+      "request: {\"inputs\": [[1.1031470267993444, 7.509936088602124, 7.228032694461817, 3.7487129040092997]]},\n",
       "prediction:0, prediction_label:Virginica, http_response_code: 200, serving_type: SKLEARN\n",
       "\n",
-      "serving: IrisFlowerClassifier, version: 1, timestamp: 1558610862986,\n",
-      "request: {\"inputs\": [[4.527984994064239, 2.7237603896779286, 7.0247987634369125, 3.774832928527622]]},\n",
-      "prediction:0, prediction_label:Virginica, http_response_code: 200, serving_type: SKLEARN\n",
-      "\n",
-      "serving: IrisFlowerClassifier, version: 1, timestamp: 1558610863071,\n",
-      "request: {\"inputs\": [[1.7749936203794587, 1.7566918117239831, 6.792108183991934, 5.190253670922236]]},\n",
-      "prediction:0, prediction_label:Virginica, http_response_code: 200, serving_type: SKLEARN\n",
-      "\n",
-      "serving: IrisFlowerClassifier, version: 1, timestamp: 1558610863165,\n",
-      "request: {\"inputs\": [[4.247634877118967, 5.249628239586993, 2.457034462224111, 5.038997108428068]]},\n",
+      "serving: IrisFlowerClassifier, version: 1, timestamp: 1560339963767,\n",
+      "request: {\"inputs\": [[2.235706745836112, 3.093572695191493, 2.7323921162142804, 2.0689962421316657]]},\n",
       "prediction:1, prediction_label:Versicolor, http_response_code: 200, serving_type: SKLEARN\n",
       "\n",
-      "serving: IrisFlowerClassifier, version: 1, timestamp: 1558610863303,\n",
-      "request: {\"inputs\": [[5.825768573944618, 4.123731386988567, 1.745489722527176, 6.163092758197717]]},\n",
+      "serving: IrisFlowerClassifier, version: 1, timestamp: 1560339963896,\n",
+      "request: {\"inputs\": [[1.3205991163619348, 2.0595736232497166, 4.985849386074168, 1.4408294851114367]]},\n",
+      "prediction:1, prediction_label:Versicolor, http_response_code: 200, serving_type: SKLEARN\n",
+      "\n",
+      "serving: IrisFlowerClassifier, version: 1, timestamp: 1560339964020,\n",
+      "request: {\"inputs\": [[4.220270978423765, 2.8304129673592966, 7.424421983383942, 5.361722367249203]]},\n",
       "prediction:0, prediction_label:Virginica, http_response_code: 200, serving_type: SKLEARN\n",
       "\n",
-      "serving: IrisFlowerClassifier, version: 1, timestamp: 1558610863388,\n",
-      "request: {\"inputs\": [[5.081606728910398, 2.459379313349036, 2.8974283777549474, 6.061801232878223]]},\n",
+      "serving: IrisFlowerClassifier, version: 1, timestamp: 1560339964124,\n",
+      "request: {\"inputs\": [[2.6970999685623243, 6.347149730290876, 5.39836695361557, 5.2666212297525705]]},\n",
       "prediction:0, prediction_label:Virginica, http_response_code: 200, serving_type: SKLEARN\n",
       "\n",
-      "serving: IrisFlowerClassifier, version: 1, timestamp: 1558610863499,\n",
-      "request: {\"inputs\": [[5.349813691946242, 2.23741770182624, 4.488386071921785, 6.458211557597765]]},\n",
-      "prediction:0, prediction_label:Virginica, http_response_code: 200, serving_type: SKLEARN"
+      "serving: IrisFlowerClassifier, version: 1, timestamp: 1560339964238,\n",
+      "request: {\"inputs\": [[3.117586271070294, 2.2683075659770253, 2.7101690021986586, 6.041976280921667]]},\n",
+      "prediction:0, prediction_label:Virginica, http_response_code: 200, serving_type: SKLEARN\n",
+      "\n",
+      "serving: IrisFlowerClassifier, version: 1, timestamp: 1560339964350,\n",
+      "request: {\"inputs\": [[7.320109368200581, 3.7870289879752477, 5.293915277978317, 5.76674104896385]]},\n",
+      "prediction:0, prediction_label:Virginica, http_response_code: 200, serving_type: SKLEARN\n",
+      "\n",
+      "serving: IrisFlowerClassifier, version: 1, timestamp: 1560339964452,\n",
+      "request: {\"inputs\": [[4.314981146863798, 3.893368580779179, 6.288495981583821, 4.539703355969132]]},\n",
+      "prediction:0, prediction_label:Virginica, http_response_code: 200, serving_type: SKLEARN\n",
+      "\n",
+      "serving: IrisFlowerClassifier, version: 1, timestamp: 1560339964556,\n",
+      "request: {\"inputs\": [[5.850494074522825, 5.127440379139064, 2.628009669953899, 2.9049280774589574]]},\n",
+      "prediction:1, prediction_label:Versicolor, http_response_code: 200, serving_type: SKLEARN"
      ]
     }
    ],
