[HOPSWORKS-1145] Upgrade examples for TF 1.14

--- a/notebooks/deep_learning/Distributed_Training/mirrored_strategy/keras.ipynb
+++ b/notebooks/deep_learning/Distributed_Training/mirrored_strategy/keras.ipynb
@@ -50,9 +50,9 @@
     "\n",
     "    # Define DistributionStrategies and convert the Keras Model to an\n",
     "    # Estimator that utilizes these DistributionStrateges.\n",
-    "    # Evaluator is a single worker, so using MirroredStrategy.\n",
+    "    # Evaluator is a single worker, so using MultiWorkerMirroredStrategy.\n",
     "    run_config = tf.estimator.RunConfig(\n",
-    "            train_distribute=tf.contrib.distribute.MirroredStrategy())\n",
+    "            train_distribute=tf.distribute.experimental.MultiWorkerMirroredStrategy())\n",
     "    keras_estimator = tf.keras.estimator.model_to_estimator(keras_model=model, config=run_config, model_dir=model_dir)\n",
     "\n",
     "    # Train and evaluate the model. Evaluation will be skipped if there is not an\n",
