--- a/notebooks/deep_learning/Distributed_Training/mirrored_strategy/mnist.ipynb
+++ b/notebooks/deep_learning/Distributed_Training/mirrored_strategy/mnist.ipynb
@@ -239,7 +239,7 @@
     "    mnist_train, mnist_test = tf.keras.datasets.mnist.load_data()\n",
     "        \n",
     "    config = tf.estimator.RunConfig(\n",
-    "        train_distribute=tf.contrib.distribute.MirroredStrategy(),\n",
+    "        train_distribute=tf.distribute.experimental.MultiWorkerMirroredStrategy(),\n",
     "            model_dir=tensorboard.logdir(),\n",
     "            save_summary_steps=100,\n",
     "            log_step_count_steps=100,\n",
