[HOPSWORKS-1156][featurestore] support feature defintions stored remotely

--- a/notebooks/featurestore/FeaturestoreTourScala.ipynb
+++ b/notebooks/featurestore/FeaturestoreTourScala.ipynb
@@ -41,22 +41,7 @@
     "val rawData = spark.read.format(\"csv\").load(filename)\n",
     "val polynomialFeatures = rawData.map((x: Float) => scala.math.pow(x, 2))\n",
     "import io.hops.util.Hops\n",
-    "Hops.insertIntoFeaturegroup(\n",
-    "    polynomialFeatures, \n",
-    "    spark, \n",
-    "    \"polynomial_features\",\n",
-    "    featurestore,\n",
-    "    featuregroupVersion,\n",
-    "    mode,\n",
-    "    descriptiveStats, \n",
-    "    featureCorr,\n",
-    "    featureHistograms, \n",
-    "    clusterAnalysis, \n",
-    "    statColumns, \n",
-    "    numBins,\n",
-    "    corrMethod, \n",
-    "    numClusters\n",
-    ")\n",
+    "Hops.insertIntoFeaturegroup(\"polynomial_features\").setDataframe(polynomialFeatures).write()\n",
     "```\n",
     "- Reading from the feature store, to train a model on a set of features, the features can be read from the feature store, e.g:\n",
     "\n",
@@ -66,7 +51,9 @@
     "val featuresDf = Hops.getFeatures(spark, features, Hops.getProjectFeaturestore)\n",
     "```\n",
     "\n",
-    "As a data engineer/data scientist, you can think of the feature store as a middle-layer. Once you have computed a set of features, instead of writing them locally to a csv file, insert them in the feature store so that the features can get documented/versioned, backfilled, **and so that your colleagues can re-use your features!** "
+    "As a data engineer/data scientist, you can think of the feature store as a middle-layer. Once you have computed a set of features, instead of writing them locally to a csv file, insert them in the feature store so that the features can get documented/versioned, backfilled, **and so that your colleagues can re-use your features!** \n",
+    "\n",
+    "In this notebook we will take a look at interacting with the Feature Store through the Scala SDK,there is also a Python SDK available if you prefer that."
    ]
   },
   {
@@ -99,7 +86,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>28</td><td>application_1555980784524_0031</td><td>spark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1555980784524_0031/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1555980784524_0031_01_000001/demo_featurestore_admin000__meb10000\">Link</a></td><td>✔</td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>33</td><td>application_1563552731330_0050</td><td>spark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1563552731330_0050/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1563552731330_0050_01_000001/demo_featurestore_admin000__meb10000\">Link</a></td><td>✔</td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -920,19 +907,265 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By default the new featuregroup will be created in the project's featurestore and the statistics for the new featuregroup will be computed based on the provided spark dataframe. You can configure this behaviour by modifying the default arguments and filling in extra metadata.\n",
+    "By default the new featuregroup will be created in the project's featurestore and the statistics for the new featuregroup will be computed based on the provided spark dataframe. You can configure this behaviour by modifying the default arguments and filling in extra metadata."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Create an On-Demand Feature Group\n",
     "\n",
-    "The dependencies argument takes a list of HDFS file names that the feature group depends on, i.e when the datasets that a featuregroup depends on have been modified, the feature group should be recomputed. The dependencies can also be updated and viewed in the feature registry UI. \n",
+    "Feature Groups in Hopsworks can be of two types: \n",
     "\n",
-    "![Feature group dependencies](./images/deps.png \"Feature group dependencies\")\n",
+    "- **Cached Feature Groups** are pre-computed and stored inside Hopsworks as Hive tables for historical data and MySQL Cluster tables for online data.\n",
+    "- **On-Demand Feature Groups** are computed on-demand using a JDBC connector and a SQL query. On-Demand Feature Groups can be stored in any JDBC-compliant data store.\n",
     "\n",
-    "![Feature group dependencies](./images/deps2.png \"Feature group dependencies\")\n",
+    "To create an on-demand feature group, you must first configure a storage connector ti the JDBC backend that you want to query and then you can use the method `createFeaturegroup().setOnDemand(true)` to create the on-demand feature group.\n",
     "\n",
-    "The jobName argument takes the name of a job that compute the features. If you don't have a job yet, you can add the job later in the feature store UI: \n",
+    "By default, a Feature Store in Hopsworks has two default JDBC storage connectors configured:\n",
     "\n",
-    "![Feature group jobs](./images/jobs1.png \"Feature group jobs\")\n",
+    "- `project_name`: a storage connector for the Hive database of the project\n",
+    "- `project_name_featurestore`: a storage connector for the Feature Store database of the project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can list the available storage connectors in the feature store, using the method `getStorageConnectors()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "res1: java.util.List[String] = [demo_featurestore_admin000_featurestore, demo_featurestore_admin000, demo_featurestore_admin000_Training_Datasets]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Hops.getStorageConnectors().read()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we inspect the Feature Store hive database, we can see that there is a table called `games_features_1`, lets use the JDBC connector called `<project_name>_featurestore` and the SQL string `\"SELECT * FROM games_features_1 WHERE score > 1\"` to create an on-demand feature group called `games_features_on_demand`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+--------------------+-----------+\n",
+      "|            database|           tableName|isTemporary|\n",
+      "+--------------------+--------------------+-----------+\n",
+      "|demo_featurestore...|attendances_featu...|      false|\n",
+      "|demo_featurestore...|    games_features_1|      false|\n",
+      "|demo_featurestore...|games_features_do...|      false|\n",
+      "|demo_featurestore...|games_features_pa...|      false|\n",
+      "|demo_featurestore...|numpy_test_example_1|      false|\n",
+      "+--------------------+--------------------+-----------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "Hops.queryFeaturestore(\"show tables\").read().show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------+---------+-------+\n",
+      "|    col_name|data_type|comment|\n",
+      "+------------+---------+-------+\n",
+      "|away_team_id|      int|      -|\n",
+      "|home_team_id|      int|      -|\n",
+      "|       score|      int|      -|\n",
+      "+------------+---------+-------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "Hops.queryFeaturestore(\"describe games_features_1\").read().show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "featuregroupName: String = games_features_on_demand\n",
+      "storageConnector: String = demo_featurestore_admin000_featurestore\n",
+      "query: String = SELECT * FROM games_features_1 WHERE score > 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "val featuregroupName = \"games_features_on_demand\"\n",
+    "val storageConnector = \"demo_featurestore_admin000_featurestore\"\n",
+    "val query = \"SELECT * FROM games_features_1 WHERE score > 1\"\n",
+    "Hops.createFeaturegroup(featuregroupName).setOnDemand(true).setStorageConnector(storageConnector).setSqlQuery(query).write()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On-Demand Feature Groups can be queried just like cached feature groups. When you query an on-demand feature group, it will open a JDBC connection and apply the associated SQL query and return the resulting dataframe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------+------------+-----+\n",
+      "|away_team_id|home_team_id|score|\n",
+      "+------------+------------+-----+\n",
+      "|          46|          32|    3|\n",
+      "|          15|          13|    2|\n",
+      "|          50|           1|    3|\n",
+      "|          36|          39|    2|\n",
+      "|          14|           8|    3|\n",
+      "+------------+------------+-----+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "Hops.getFeaturegroup(\"games_features_on_demand\").read().show(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets create an on-demand feature group with the same JDBC connector and the table `players_features_1`, and see how we can make queries that join on-demand feature groups with cached feature groups dynamically."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "query: String = SELECT average_player_age as average_player_age_on_dmd, average_player_worth as average_player_worth_on_dmd, team_id FROM players_features_1\n",
+      "storageConnector: String = demo_featurestore_admin000_featurestore\n",
+      "featuregroupName: String = players_features_on_demand\n"
+     ]
+    }
+   ],
+   "source": [
+    "val query = \"SELECT average_player_age as average_player_age_on_dmd, average_player_worth as average_player_worth_on_dmd, team_id FROM players_features_1\"\n",
+    "val storageConnector = Hops.getProjectName() + \"_featurestore\"\n",
+    "val featuregroupName = \"players_features_on_demand\"\n",
+    "Hops.createFeaturegroup(featuregroupName).setOnDemand(true).setStorageConnector(storageConnector).setSqlQuery(query).write()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When you make a query to the feature store that cross multiple feature groups, including on-demand feature groups. The Query Planner that comes with the Python SDK will first fetch the on-demand feature groups and then register them as SparkSQL temporary tables, before joining them with the features from the cached feature groups.\n",
     "\n",
-    "![Feature group jobs](./images/jobs2.png \"Feature group jobs\")"
+    "Note that when querying on-demand-featuregroups, you typically have to supply the `joinKey` and providing a map of Map with entries of `<feature group name> -> <feature group version>` manually as the query planner will often not have information about the columns in the on-demand feature groups and hence cannot infer the join key or infer in which on-demand feature group a certain feature exists."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "features: List[String] = List(average_player_age_on_dmd, average_player_worth_on_dmd, average_attendance, sum_attendance)\n",
+      "featuregroupsMap: scala.collection.immutable.Map[String,Integer] = Map(players_features_on_demand -> 1, attendances_features -> 1)\n",
+      "javaFeaturegroupsMap: java.util.HashMap[String,Integer] = {players_features_on_demand=1, attendances_features=1}\n",
+      "+-------------------------+---------------------------+------------------+--------------+\n",
+      "|average_player_age_on_dmd|average_player_worth_on_dmd|average_attendance|sum_attendance|\n",
+      "+-------------------------+---------------------------+------------------+--------------+\n",
+      "|                    24.63|                   231.8708|         3587.5015|      71750.03|\n",
+      "|                    25.71|                  223.71338|         2532.1638|     50643.277|\n",
+      "|                    25.63|                  280.11465|         3397.8066|      67956.13|\n",
+      "|                    25.65|                  307.87268|          3271.934|      65438.68|\n",
+      "|                     25.5|                  298.78235|         4074.8047|      81496.09|\n",
+      "+-------------------------+---------------------------+------------------+--------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "val features = List(\"average_player_age_on_dmd\", \"average_player_worth_on_dmd\", \"average_attendance\", \"sum_attendance\")\n",
+    "val featuregroupsMap = Map[String, Integer](\n",
+    "    \"players_features_on_demand\"->1,\n",
+    "    \"attendances_features\"->1\n",
+    ")\n",
+    "val javaFeaturegroupsMap = new java.util.HashMap[String, Integer](featuregroupsMap)\n",
+    "Hops.getFeatures(features).setJoinKey(\"team_id\").setSpark(spark).setFeaturestore(Hops.getProjectFeaturestore.read).setFeaturegroupsAndVersions(javaFeaturegroupsMap).read().show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------------+\n",
+      "|average_player_age_on_dmd|\n",
+      "+-------------------------+\n",
+      "|                    24.63|\n",
+      "|                    25.71|\n",
+      "|                    25.63|\n",
+      "|                    25.65|\n",
+      "|                     25.5|\n",
+      "+-------------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "Hops.getFeature(\"average_player_age_on_dmd\").setFeaturegroup(\"players_features_on_demand\").read().show(5)"
    ]
   },
   {
