remove facets notebooks, superceed by WhatIf. Use the hdfs census dataset, not download census dataset in whatif notebook

--- a/notebooks/ml/Plotting/What_If_Tool_Notebook.ipynb
+++ b/notebooks/ml/Plotting/What_If_Tool_Notebook.ipynb
@@ -124,9 +124,10 @@
     "#@title Read training dataset from CSV {display-mode: \"form\"}\n",
     "\n",
     "import pandas as pd\n",
+    "import hops.hdfs as hdfs\n",
     "\n",
     "# Set the path to the CSV containing the dataset to train on.\n",
-    "csv_path = 'https://archive.ics.uci.edu/ml/machine-learning-databases/adult/adult.data'\n",
+    "# csv_path = 'https://archive.ics.uci.edu/ml/machine-learning-databases/adult/adult.data'\n",
     "\n",
     "# Set the column names for the columns in the CSV. If the CSV's first line is a header line containing\n",
     "# the column names, then set this to None.\n",
@@ -136,7 +137,11 @@
     "  \"Hours-per-week\", \"Country\", \"Over-50K\"]\n",
     "\n",
     "# Read the dataset from the provided CSV and print out information about it.\n",
-    "df = pd.read_csv(csv_path, names=csv_columns, skipinitialspace=True)\n",
+    "h = hdfs.get_fs()\n",
+    "with h.open_file(hdfs.project_path() + \"/TourData/census/adult.data\", \"rt\") as trainFile:\n",
+    "    df = pd.read_csv(trainFile, names=csv_columns, skipinitialspace=True)\n",
+    "\n",
+    "# df = pd.read_csv(csv_path, names=csv_columns, skipinitialspace=True)\n",
     "\n",
     "df"
    ]
@@ -231,9 +236,14 @@
     "from witwidget.notebook.visualization import WitWidget\n",
     "\n",
     "# Load up the test dataset\n",
-    "test_csv_path = 'https://archive.ics.uci.edu/ml/machine-learning-databases/adult/adult.test'\n",
-    "test_df = pd.read_csv(test_csv_path, names=csv_columns, skipinitialspace=True,\n",
-    "  skiprows=1)\n",
+    "#test_csv_path = 'https://archive.ics.uci.edu/ml/machine-learning-databases/adult/adult.test'\n",
+    "#test_df = pd.read_csv(test_csv_path, names=csv_columns, skipinitialspace=True,\n",
+    "#  skiprows=1)\n",
+    "\n",
+    "h = hdfs.get_fs()\n",
+    "with h.open_file(hdfs.project_path() + \"/TourData/census/adult.test\", \"rt\") as testFile:\n",
+    "    test_df = pd.read_csv(testFile, names=csv_columns, skipinitialspace=True, skiprows=1)\n",
+    "\n",
     "make_label_column_numeric(test_df, label_column, lambda val: val == '>50K.')\n",
     "test_examples = df_to_examples(test_df[0:num_datapoints])\n",
     "\n",
@@ -242,13 +252,6 @@
     "    classifier, feature_spec).set_label_vocab(['Under 50K', 'Over 50K'])\n",
     "WitWidget(config_builder, height=tool_height_in_px)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -259,9 +262,9 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "python-jim__meb10000",
+   "display_name": "python-demo_deep_learning_admin000__meb10000",
    "language": "python",
-   "name": "python-jim__meb10000"
+   "name": "python"
   },
   "language_info": {
    "codemirror_mode": {
