fix tfrecords path in maggy notebook

--- a/notebooks/ml/Parallel_Experiments/Maggy/maggy-fashion-mnist-example.ipynb
+++ b/notebooks/ml/Parallel_Experiments/Maggy/maggy-fashion-mnist-example.ipynb
@@ -144,8 +144,8 @@
     "    # Input image dimensions\n",
     "    img_rows, img_cols = 28, 28\n",
     "    \n",
-    "    train_filenames = [hdfs.project_path() + \"TourData/data/mnist/train/train.tfrecords\"]\n",
-    "    validation_filenames = [hdfs.project_path() + \"TourData/data/mnist/validation/validation.tfrecords\"]\n",
+    "    train_filenames = [hdfs.project_path() + \"TourData/mnist/train/train.tfrecords\"]\n",
+    "    validation_filenames = [hdfs.project_path() + \"TourData/mnist/validation/validation.tfrecords\"]\n",
     "    \n",
     "    # Determine the number of records in the TFRecords\n",
     "    num_train = 0\n",
@@ -216,6 +216,9 @@
     "    model.compile(loss=keras.losses.categorical_crossentropy,\n",
     "                  optimizer=opt,\n",
     "                  metrics=['accuracy'])\n",
+    "    \n",
+    "    # setup tensorboard\n",
+    "    tb_callback = TensorBoard(log_dir=tensorboard.logdir(), histogram_freq=0,write_graph=True, write_images=True)\n",
     "    \n",
     "    #########\n",
     "    ### maggy: REPORTER API through keras callback\n",
