bug in maggy example, missing tensorboard import

--- a/notebooks/ml/Parallel_Experiments/Maggy/maggy-fashion-mnist-example.ipynb
+++ b/notebooks/ml/Parallel_Experiments/Maggy/maggy-fashion-mnist-example.ipynb
@@ -135,6 +135,7 @@
     "    from tensorflow.keras import backend as K\n",
     "    import math\n",
     "    \n",
+    "    from hops import tensorboard\n",
     "    from hops import hdfs\n",
     "\n",
     "    batch_size = 500\n",
