--- a/notebooks/featurestore/FeaturestoreTourScala.ipynb
+++ b/notebooks/featurestore/FeaturestoreTourScala.ipynb
@@ -86,7 +86,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>33</td><td>application_1563552731330_0050</td><td>spark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1563552731330_0050/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1563552731330_0050_01_000001/demo_featurestore_admin000__meb10000\">Link</a></td><td>✔</td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>52</td><td>application_1563552731330_0069</td><td>spark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1563552731330_0069/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1563552731330_0069_01_000001/demo_featurestore_admin000__meb10000\">Link</a></td><td>✔</td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -155,21 +155,7 @@
     "\n",
     "Feature Stores can be shared across projects in a multi-tenant manner, just like any Hopsworks-dataset can. You can read more about sharing datasets at [hops.io](hops.io), but in essence to share a dataset you just have to right click on it in your project. The features and featuregroups in the feature store are stored in a dataset called `<project_name>_featurestore.db` in your project.\n",
     "\n",
-    "![Share Feature Store](./images/share_featurestore.png \"Share Feature Store\")\n",
-    "\n",
-    "The training datasets in the feature store are stored in a dataset called `project_name_Training_Datasets`. \n",
-    "\n",
-    "![Share Feature Store](./images/share_featurestore.png \"Share Feature Store\")\n",
-    "\n",
-    "Typically, if you are sharing a feature store with another project, you want to share both the `<project_name>_featurestore.db` dataset and the `project_name_Training_Datasets` dataset.\n",
-    "\n",
-    "To list all feature stores accessible in the current project, you can use the API method `getProjectFeaturestores()`. You can also view the list of accessible feature stores in the feature registry UI:\n",
-    "\n",
-    "![Share Feature Store](./images/select_fs.png \"Share Feature Store\")\n",
-    "\n",
-    "By using multiple feature stores and feature store sharing across projects you can enforce access rights to features.\n",
-    "\n",
-    "![Multi-Tenant Feature Stores](./images/multitenant.png \"Multi-Tenant Feature Stores\")"
+    "![Share Feature Store](./images/share_featurestore.png \"Share Feature Store\")"
    ]
   },
   {
@@ -555,162 +541,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Example Errors"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lets look at an example of a common error that can occur when you query the feature store.\n",
-    "\n",
-    "If you try to query the feature store for a feature that exists in multiple feature groups, it is impossible for the query planner to infer from which feature group to fetch the feature so it will throw an exception. When this error happen you should specify which feature group to fetch from so that the query planner knows how to get the feature.\n",
-    "\n",
-    "**Note**: <font color='red'>This cell should fail, don't panic :)</font>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "java.lang.IllegalArgumentException: Found the feature with name: team_id in more than one of the featuregroups of the featurestore demo_featurestore_admin000_featurestore please specify featuregroup that you want to get the feature from. The matched featuregroups are: games_features_1, season_scores_features_1, attendances_features_1, players_features_1, teams_features_1\n",
-      "  at io.hops.util.featurestore.FeaturestoreHelper.findFeature(FeaturestoreHelper.java:465)\n",
-      "  at io.hops.util.featurestore.FeaturestoreHelper.findFeaturegroupsThatContainsFeatures(FeaturestoreHelper.java:276)\n",
-      "  at io.hops.util.featurestore.ops.read_ops.FeaturestoreReadFeatures.doGetFeatures(FeaturestoreReadFeatures.java:141)\n",
-      "  at io.hops.util.featurestore.ops.read_ops.FeaturestoreReadFeatures.doGetFeatures(FeaturestoreReadFeatures.java:73)\n",
-      "  at io.hops.util.featurestore.ops.read_ops.FeaturestoreReadFeatures.read(FeaturestoreReadFeatures.java:49)\n",
-      "  ... 54 elided\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "val features1 = List(\"team_budget\", \"team_id\")\n",
-    "Hops.getFeatures(features1).read().show(5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's fix the error: "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "features1: List[String] = List(team_budget, team_id)\n",
-      "featuregroupsMap: scala.collection.immutable.Map[String,Integer] = Map(teams_features -> 1)\n",
-      "javaFeaturegroupsMap: java.util.HashMap[String,Integer] = {teams_features=1}\n",
-      "+-----------+-------+\n",
-      "|team_budget|team_id|\n",
-      "+-----------+-------+\n",
-      "|  12957.076|      1|\n",
-      "|  2403.3704|      2|\n",
-      "|  3390.3755|      3|\n",
-      "|  13547.429|      4|\n",
-      "|   9678.333|      5|\n",
-      "+-----------+-------+\n",
-      "only showing top 5 rows\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "val features1 = List(\"team_budget\", \"team_id\")\n",
-    "val featuregroupsMap = Map[String, Integer](\n",
-    "    \"teams_features\"->1\n",
-    ")\n",
-    "val javaFeaturegroupsMap = new java.util.HashMap[String, Integer](featuregroupsMap)\n",
-    "Hops.getFeatures(features1).setFeaturegroupsAndVersions(javaFeaturegroupsMap).read().show(5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Another common error is that you try to fetch features from feature groups that are not compatible, they do not got any natural join column. Typically in this case you need to either provide the join key your self or use SQL directly with `featurestore.sql()`.\n",
-    "\n",
-    "\n",
-    "**Note**: <font color='red'>This cell should fail, don't panic :)</font>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "java.lang.IllegalArgumentException: Could not find any common columns in featuregroups to join on, searched through the following featuregroups: teams_features, games_features\n",
-      "  at io.hops.util.featurestore.FeaturestoreHelper.getJoinColumn(FeaturestoreHelper.java:607)\n",
-      "  at io.hops.util.featurestore.ops.read_ops.FeaturestoreReadFeatures.doGetFeatures(FeaturestoreReadFeatures.java:142)\n",
-      "  at io.hops.util.featurestore.ops.read_ops.FeaturestoreReadFeatures.doGetFeatures(FeaturestoreReadFeatures.java:73)\n",
-      "  at io.hops.util.featurestore.ops.read_ops.FeaturestoreReadFeatures.read(FeaturestoreReadFeatures.java:49)\n",
-      "  ... 54 elided\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "val features1 = List(\"team_budget\", \"score\")\n",
-    "Hops.getFeatures(features1).read().show(5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lets fix the error:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----------+-----+\n",
-      "|team_budget|score|\n",
-      "+-----------+-----+\n",
-      "|  11296.577|    1|\n",
-      "|   4969.735|    3|\n",
-      "|  21319.533|    2|\n",
-      "|  15072.062|    1|\n",
-      "|  12957.076|    3|\n",
-      "+-----------+-----+\n",
-      "only showing top 5 rows\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "Hops.queryFeaturestore(\n",
-    "    \"SELECT team_budget, score \" +\n",
-    "    \"FROM teams_features_1 JOIN games_features_1 ON \" +\n",
-    "    \"games_features_1.home_team_id = teams_features_1.team_id\").read().show(5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "We can also explicitly specify the optional arguments: "
    ]
   },
@@ -789,15 +619,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating New Feature Groups\n",
-    "\n",
-    "In most cases it is recommended that feature groups are created in the UI on Hopsworks and that care is taken in documenting the feature group. \n",
-    "\n",
-    "![Create Feature Group from the UI](./images/create_fg.png \"Create Feature Group from the UI\")\n",
-    "\n",
-    "![Create Feature Group from the UI](./images/create_fg_2.png \"Create Feature Group from the UI\")\n",
-    "\n",
-    "However, sometimes it is practical to create a feature group directly from a spark dataframe and fill in the metadata about the featuregroup later in the UI. This can be done through the `createFeaturegroup()` API function."
+    "### Creating New Feature Groups\n"
    ]
   },
   {
@@ -1030,7 +852,7 @@
     "val featuregroupName = \"games_features_on_demand\"\n",
     "val storageConnector = \"demo_featurestore_admin000_featurestore\"\n",
     "val query = \"SELECT * FROM games_features_1 WHERE score > 1\"\n",
-    "Hops.createFeaturegroup(featuregroupName).setOnDemand(true).setStorageConnector(storageConnector).setSqlQuery(query).write()"
+    "Hops.createFeaturegroup(featuregroupName).setOnDemand(true).setJdbcConnector(storageConnector).setSqlQuery(query).write()"
    ]
   },
   {
@@ -1093,7 +915,7 @@
     "val query = \"SELECT average_player_age as average_player_age_on_dmd, average_player_worth as average_player_worth_on_dmd, team_id FROM players_features_1\"\n",
     "val storageConnector = Hops.getProjectName() + \"_featurestore\"\n",
     "val featuregroupName = \"players_features_on_demand\"\n",
-    "Hops.createFeaturegroup(featuregroupName).setOnDemand(true).setStorageConnector(storageConnector).setSqlQuery(query).write()"
+    "Hops.createFeaturegroup(featuregroupName).setOnDemand(true).setJdbcConnector(storageConnector).setSqlQuery(query).write()"
    ]
   },
   {
@@ -1184,15 +1006,6 @@
    "outputs": [],
    "source": [
     "Hops.createFeaturegroup(\"teams_features_spanish\").setDataframe(teamsFeaturesDf2).setVersion(2).write()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can now see the new version in the feature store UI:\n",
-    "\n",
-    "![Create Feature Group Version](./images/create_fg_version.png \"Create Feature Group Version\")"
    ]
   },
   {
@@ -1736,15 +1549,7 @@
     "\n",
     "This is particularly useful within large organizations where data scientists from different teams can re-use and explore new features by browsing features in the feature store and analyzing the statistics.\n",
     "\n",
-    "![Feature Registry Statistics Visualization](./images/fg_stats_1.png \"Feature Registry Statistics Visualization\")\n",
-    "\n",
-    "![Feature Registry Statistics Visualization](./images/fg_stats_2.png \"Feature Registry Statistics Visualization\")\n",
-    "\n",
-    "![Feature Registry Statistics Visualization](./images/fg_stats_3.png \"Feature Registry Statistics Visualization\")\n",
-    "\n",
-    "![Feature Registry Statistics Visualization](./images/fg_stats_4.png \"Feature Registry Statistics Visualization\")\n",
-    "\n",
-    "![Feature Registry Statistics Visualization](./images/fg_stats_5.png \"Feature Registry Statistics Visualization\")"
+    "![Feature Registry Statistics Visualization](./images/fg_stats_1.png \"Feature Registry Statistics Visualization\")"
    ]
   },
   {
@@ -1824,9 +1629,7 @@
     "\n",
     "When you train a machine learning model, you want to use all features that have predictive power and that the model can learn from. At this point, we can create a training dataset of features from several different feature groups and use that for training. That is the purpose of the training dataset abstraction. \n",
     "\n",
-    "Of course you can always just save a group of features anywhere inside your project, e.g as a csv, or .tfrecords file. However, by using the feature store you can create **managed** training datasets. Managed training datasets will show up in the feature registry UI and will automatically be versioned, documented and reproducible. \n",
-    "\n",
-    "![Feature Engineering Pipeline](./images/pipeline.png \"Feature Engineering Pipeline\")"
+    "Of course you can always just save a group of features anywhere inside your project, e.g as a csv, or .tfrecords file. However, by using the feature store you can create **managed** training datasets. Managed training datasets will show up in the feature registry UI and will automatically be versioned, documented and reproducible. "
    ]
   },
   {
@@ -1837,7 +1640,6 @@
     "\n",
     "Once a training dataset have been created you can find it in the featurestore UI in hopsworks under the tab `Training datasets`, from there you can also edit the metadata if necessary. \n",
     "\n",
-    "![Find Training Datasets](./images/find_training_datasets.png \"Find Training Datasets\")\n",
     "After a training dataset have been created with the necessary metadata you can save the actual data in the training dataset by using the API function `insertIntoTrainingDataset`."
    ]
   },
@@ -2031,15 +1833,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we now go to the Feature Registy UI in Hopsworks we can see that the training dataset have been created for us and things like versioning, documentation, and recomputation is managed for us. We can also easily edit the metadata from the UI if necesssary.\n",
-    "\n",
-    "![Training Dataset UI](./images/training_dataset.png \"Training Dataset UI\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "###  Create a New Version of A Training Dataset\n",
     "\n",
     "To create a new version, simply use the `createTrainingDataset` method and specify the version argument:"
@@ -2061,15 +1854,6 @@
    "source": [
     "val trainingDatasetVersion = Hops.getLatestTrainingDatasetVersion(\"team_position_prediction\").read + 1\n",
     "Hops.createTrainingDataset(\"team_position_prediction\").setDataframe(featuresDf).setDataFormat(\"tfrecords\").setDescription(\"a dataset with features for football teams, used for training a model to predict league-position\").setVersion(trainingDatasetVersion).write"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can now see the new version in the feature store UI:\n",
-    "\n",
-    "![Create Training Dataset Version](./images/create_td_version.png \"Create Training Dataset Version\")"
    ]
   },
   {
@@ -2216,6 +2000,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### External Training Datasets\n",
+    "\n",
+    "By default, training datasets in the Feature Store are stored in HopsFS. However, it is also possible to store datasets on S3 and just manage the metadata from Hopsworks Feature Store. \n",
+    "\n",
+    "To do this, configure an s3 connector for your feature store, e.g with name `my_s3_connector`, then you can save a training dataset to s3 by specifying the s3_connector name in the `sink` argument to `createTrainingDataset`:\n",
+    "\n",
+    "```scala\n",
+    "val storageConnector = \"my_s3_connector\"\n",
+    "Hops.createTrainingDataset(training_dataset_name)\n",
+    "                          .setDataframe(df)\n",
+    "                          .setSink(s3StorageConnectorName).write()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Update Training Dataset Stats\n",
     "\n",
     "The API is similar to the one for updating the stats of a feature group:"
@@ -2244,25 +2046,6 @@
    "outputs": [],
    "source": [
     "Hops.updateTrainingDatasetStats(\"team_position_prediction\").setSpark(spark).setFeaturestore(Hops.getProjectFeaturestore.read).setVersion(1).setDescriptiveStats(true).setFeatureCorr(true).setFeatureHistograms(true).setClusterAnalysis(true).setStatColumns(null).setNumBins(20).setCorrMethod(\"pearson\").setNumClusters(5).write"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Create a Managed Training Dataset Without Using the API \n",
-    "\n",
-    "To create a **managed** training dataset without using the API, e.g to create a managed training dataset from a .tfrecords file downloaded from Kaggle or from a .csv file from Kaggle, first go to the Feature Registry UI and create a new training dataset and fill in the metadata:\n",
-    "\n",
-    "![Create Training Dataset From the UI](./images/create_td_1.png \"Create Training Dataset From the UI\")\n",
-    "\n",
-    "![Create Training Dataset From the UI](./images/create_td_2.png \"Create Training Dataset From the UI\")\n",
-    "\n",
-    "Once the dataset have been created from the UI, you can find that inside the \"Training Datasets\" folder in your project a new folder for the dataset have showed up that is called `training_datasetname_version`:\n",
-    "\n",
-    "![Create Training Dataset From the UI](./images/create_td_3.png \"Create Training Dataset From the UI\")\n",
-    "\n",
-    "Simply upload your dataset inside that folder, e.g you can upload for example a single .csv file or a folder with part-r-X.csv files. **It is important that you name the folder/file the name of your training dataset underscore version, e.g sample_dataset_1 or sample_dataset.csv_1**"
    ]
   },
   {
