[HOPSWORKS-909] Upgrade Kafka to 2.3.0

--- a/notebooks/spark/KafkaSparkPython_ConsumeDemoProducer.ipynb
+++ b/notebooks/spark/KafkaSparkPython_ConsumeDemoProducer.ipynb
@@ -95,6 +95,7 @@
     "  .option(\"kafka.ssl.keystore.location\", tls.get_key_store()) \\\n",
     "  .option(\"kafka.ssl.keystore.password\", tls.get_key_store_pwd()) \\\n",
     "  .option(\"kafka.ssl.key.password\", tls.get_trust_store_pwd()) \\\n",
+    "  .option(\"kafka.ssl.endpoint.identification.algorithm\", \"\") \\\n",
     "  .option(\"subscribe\", TOPIC_NAME) \\\n",
     "  .load()"
    ]
