--- a/notebooks/spark/KafkaSparkScala_ConsumeDemoProducer.ipynb
+++ b/notebooks/spark/KafkaSparkScala_ConsumeDemoProducer.ipynb
@@ -139,6 +139,7 @@
     "      option(\"kafka.ssl.keystore.location\",Hops.getKeyStore()).\n",
     "      option(\"kafka.ssl.keystore.password\",Hops.getKeystorePwd().filterNot(_.toInt < 32).filterNot(_.toInt == 64)).\n",
     "      option(\"kafka.ssl.key.password\",Hops.getKeystorePwd().filterNot(_.toInt < 32).filterNot(_.toInt == 64)).\n",
+    "      option(\"kafka.ssl.endpoint.identification.algorithm\",\"\").\n",
     "      option(\"subscribe\", topicName).load();"
    ]
   },
